two forms valid at the same time

--- a/django_multiple_forms/templates/two_forms.html
+++ b/django_multiple_forms/templates/two_forms.html
@@ -1,5 +1,10 @@
 {% extends 'outer.html' %}
 
 {% block body %}
-Body
+  <form method="post">
+    {% csrf_token %}
+    {{ contact_form }}
+    {{ subscription_form }}
+    <button>Submit</button>
+  </form>
 {% endblock %}
